@@ -1,3 +1,4 @@
+* get_shortage works on a list of products
 * Group purchases using a key
 
 Version 2.2.0 - 2011-10-25
